<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_genres"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_genres" />
    <item
        android:id="@+id/navigation_bookshelf"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/navigation_shelf"
        />
    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_feed" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_profile" />
</menu>
